  * TODO: pull-lp-source task done.
  * ubuntutools/packages.py: Created checkIsInDebian() function.
  * ubuntutools/lp/functions.py: Improved error messages, and made prettier
    functions.
  * ubuntutools/lp/libsupport.py: Fail if we're unable to import launchpadlib
    (we need it to run stuff).
  * ubuntutools/lp/urlopener.py: Removed - module no longer needed.
  * buildd:
    - Use launchpadlib to check the Ubuntu release is valid.
    - Moved Launchpad module imports here - speed up usage parsing to improve
      user experience.
    - Do not display override message if --arch is not used.
    - Fix permissions warning message and do not mention teams as we check on
      a per package basis.

 -- Michael Bienia <geser@ubuntu.com>  Tue, 09 Jun 2009 10:31:03 +0200

ubuntu-dev-tools (0.74) karmic; urgency=low

  [ Kees Cook ]
  * mk-sbuild-lv:
    - Skip security repo for Debian unstable, thanks to Ryan Niebur
      (LP: #371569).
    - Change directory out of the way of schroot problems.

  [ Siegfried-Angel Gevatter Pujals ]
  * grab-merge:
     - Show an error message if the package doesn't exist.
     - Be paraonic and add "--one-file-system" to the rm call.
     - Delete the directory just after creating it if the package
       doesn't exist.

  [ Iain Lane ]
  * ubuntutools/lp/lp_functions.py,
    ubuntutools/lp/udtexceptions.py:
    - Add new public functions that expose features from LP API
    - Modify isLPTeamMember to use LP API
  * requestsync
    - Use new functions to check if user can upload requested package directly
      instead of checking team membership
    - Default to current development release if no release is specified on
      commandline
    - Correct bug supervisor team to ubuntu-bugcontrol (LP: #374563)
    - Remove team names from sponsorship message - makes the function much
      simpler
  * buildd
    - Check if user has upload privileges instead of checking for team
      membership when seeing if operations are permitted 
